2003-09-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Test C++ compiler for __func__ support.
	* magick/log.h: Added GetCurrentFunction() macro to handle
	__func__ support determination.  Re-wrote GetMagickModule() macro
	to use GetCurrentFunction().  Changes should allow compilation of
	Magick++ when the C compiler supports __func__ but the C++
	compiler does not.
	* configure.ac: Changed from using HAS___func__ define to
	HAS_C__func__ since this feature may be language sensitive.
	* locale/C.mgk: Added missing JNGCompressionNotSupported message.

2003-09-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/attribute.c (Generate8BIMAttribute): Fix sscanf argument
	type mis-match.
	* coders/ps3.c (ZLIBEncodeImage): Fix mis-classified
	ZipLibraryIsNotAvailable error report.
	* coders/url.c (RegisterURLImage): Only register URL format
	support if libxml2 is available.
	* coders/msl.c (RegisterMSLImage): Only register MSL format
	support if libxml2 is available.

2003-09-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/histogram.c (WriteHISTOGRAMImage): Remove a useless loop.
	* coders/wpg.c: Applied patch from Fojtik Jaroslav to support
	reading WPGs which use the EXT token.

2003-08-31  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/color.c (HistogramToFile): Renamed static method
	'Histogram' to 'HistogramToFile' to make it more clear what this
	function does.
	(GetColorHistogram): Added new function to support retrieving a
	color histogram of the image.  A color histogram contains a count
	of how many times each color occurs in the image.
	* magick/image.c (GetImageChannelDepth): Return an 'unsigned int'
	rather than 'long'.

2003-08-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* PerlMagick/Magick.xs: Add support for CopyCyan, CopyMagenta,
	CopyYellow, and CopyBlack, composition operators.
	* magick/composite.c (CompositeImage): Added support for
	CopyCyanCompositeOp, CopyMagentaCompositeOp,