@@ -10,6 +10,7 @@
  * test to pass.
  * */
 
+#define MAGICK_IMPLEMENTATION 1
 #if !defined(_VISUALC_)
 #include <magick_config.h>
 #endif
