@@ -11,6 +11,7 @@
  *
  */
 
+#define MAGICK_IMPLEMENTATION 1
 #if !defined(_VISUALC_)
 #include <magick_config.h>
 #endif
