@@ -56,6 +56,9 @@
 2003-09-04  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
+  <LI> tests/constitute.c, tests/rwblob.c, tests/rwfile.c : Define
+        MAGICK_IMPLEMENTATION since these test programs using some internal
+        extensions.<BR>
   <LI> configure.ac: Test C++ compiler for __func__ support.
   <LI> magick/log.h: Added GetCurrentFunction() macro to handle
         __func__ support determination.  Re-wrote GetMagickModule() macro
